# laboratornie_bivt_25_1-Public

./: README.md  pyproject.toml  test_lab09.py
data/lab09/: students.csv
data/samples/: people.csv  people.json  test.txt
src/lab01/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: A задание.py  B задание.py  B.py  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: __init__.py  csv_xlsx.py  json_csv.py  test.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.MD  models.py  serialize.py
src/lab09/: group.py
src/lab10/: linked_list.py  structures.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
лабораторная 1/: ex05.py
