[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lab07"
version = "1.0.0"
description = "Тестирование : pytest + стиль (black)"
requires-python = ">=3.14"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 88           # Максимальная длина строки 88 символов
target-version = ["py314"] # Использовать синтаксис Python 3.14
exclude = """
(
    /venv     # Не форматировать папку venv (виртуальное окружение)
  | /.venv    # Не форматировать папку .venv
  | /data     # Не форматировать папку data (там данные для тестов)
  | /images   # Не форматировать папку images
)
"""

[tool.pytest.ini_options]
testpaths = ["tests"]